[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-checkpoint-tigris"
version = "0.1.0"
description = "Library with a Tigris object-storage implementation of LangGraph checkpoint saver, with zero-copy bucket-fork branching."
authors = [{ name = "Tigris Data, Inc." }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ['LICENSE']
keywords = ["langgraph", "langchain", "checkpoint", "tigris", "s3", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langgraph-checkpoint>=4.1.0,<5.0.0",
    "boto3>=1.34",
    "aioboto3>=12.3",
]

[project.urls]
Homepage = "https://www.tigrisdata.com/"
Source = "https://github.com/tigrisdata/tigris-langgraph/tree/main/libs/checkpoint-tigris"
Documentation = "https://www.tigrisdata.com/docs/"

[dependency-groups]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-watcher",
  "langgraph",
  "langgraph-checkpoint",
  "langgraph-checkpoint-conformance",
  "pytest-retry>=1.7.0",
]
lint = [
  "ruff",
  "codespell",
  "ty",
]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
]

[tool.uv]
default-groups = ['dev']

[tool.hatch.build.targets.wheel]
include = ["langgraph"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008"]
target-version = "py310"

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-key = "ignore"
invalid-method-override = "ignore"
invalid-return-type = "ignore"
invalid-type-form = "ignore"
invalid-yield = "ignore"
not-iterable = "ignore"
not-subscriptable = "ignore"
unused-type-ignore-comment = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unsupported-operator = "ignore"

[tool.pytest-watcher]
now = true
delay = 0.1
runner_args = ["--ff", "-v", "--tb", "short"]
patterns = ["*.py"]
